--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,14 +121,13 @@
   }
 }
 .profile-body{
-box-shadow: 2px 57px 112px -8px rgba(0,0,0,0.1);
--webkit-box-shadow: 2px 57px 112px -8px rgba(0,0,0,0.1);
--moz-box-shadow: 2px 57px 112px -8px rgba(0,0,0,0.1);
+box-shadow: 0px 14px 22.1px 0px rgba(0, 0, 0, 0.24);
+
 }
 .inner-shadow-bottom{
-box-shadow: 2px -6px 11px -1px rgba(0,0,0,0.05) inset;
--webkit-box-shadow: 2px -6px 11px -1px rgba(0,0,0,0.05) inset;
--moz-box-shadow: 2px -6px 11px -1px rgba(0,0,0,0.05) inset;
+box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.35) inset;
+-webkit-box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.35) inset;
+-moz-box-shadow: 0px -2px 5px 1px rgba(0,0,0,0.35) inset;
 }
 .editor{
    background: 
